# rust-api

./: .gitignore  Cargo.toml  Rocket.toml  RustAPI.code-workspace
Source/: Backend.rs  Main.rs  Server.rs
Source/Controllers/: Hello.rs  mod.rs
