[package]
name = "RustAPI"
version = "0.0.1"
description = "Rust API"
repository = "https://github.com/GuilhermeWerner/RustAPI"
authors = ["GuilhermeWerner <guilhermeqwerner@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[[bin]]
name="Server"
path = "Source/Server.rs"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_contrib = "0.4.6"
mysql = "20.1.0"
dotenv = "0.15.0"
