[package]
name = "RustAPI"
version = "0.0.1"
description = "Rust API"
repository = "https://github.com/GuilhermeWerner/RustAPI"
authors = ["GuilhermeWerner <guilhermeqwerner@gmail.com>"]
license = "MIT"
edition = "2018"
publish = false

[lib]
name="Backend"
crate-type = ["rlib"]
path = "Source/Backend.rs"

[[bin]]
name="Backend"
path = "Source/Main.rs"

[dependencies]
Framework-Log = { path = "../Framework/Source/Log" }
actix-web = "3.3.2"
actix-service = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

[dev-dependencies]
actix-rt = "2.2.0"
